Archive2/5d/5e2ca50b5619e2/output
main.cpp: In function 'bool IsInherit()':
main.cpp:34:1: error: expected primary-expression before '}' token
 }
 ^
main.cpp:34:1: error: expected ';' before '}' token
